Drupal 8.3.1, 2017-04-19
------------------------
- Fixed security issues. See SA-CORE-2017-002.

Drupal 8.3.0, 2017-04-05
------------------------
- Added modules:
    * Added the Workflows module (experimental) which abstracts transitions and
      states from Content Moderation into a separate component for reuse by
      other modules implementing non-publishing workflows.
    * Added the Layout Discovery module (experimental) which provides an API for
      modules or themes to register layouts.
    * Added the Field Layout module (experimental) which provides the ability
      for site builders to rearrange fields on content types, block types, etc.
      into new regions, for both the form and display, on the same forms
      provided by the normal field user interface.
- Updated vendor libraries:
    * Updated to Twig 1.25.
    * Updated to jQuery 2.2.4.
    * Updated to CKEditor 4.6.2 (with new Moono-Lisa skin).
    * Updated Symfony components to 2.8.18.
    * Updated PHPUnit to 4.8.35.
    * Applied patch-level updates to the latest versions for all dependencies
      wherever possible. Minor updates applied for Symfony PSR-7 Bridge and
      Zend Stdlib, which Drupal does not depend on directly.
- Browser support:
    * Advance notice: Internet Explore 9 and 10 will no longer supported from
      8.4.x, scheduled for October 2017. Microsoft has now ended support for
      these browsers. Drupal will still support Internet Explorer 11 and its
      replacement, Edge.
- Raised stability levels of experimental modules:
    * Updated the BigPipe module from beta to stable.
    * Updated the Migrate module from alpha to beta.
    * See https://www.drupal.org/core/experimental#versions for more
      information about the stability levels of experimental modules.
- Improved authoring features:
    * Can now drag and drop images into image fields in Quick Edit mode.
    * Image fields are now limited to only accepting images, so that users on