@@ -81,7 +81,7 @@ class Drupal {
   /**
    * The current system version.
    */
-  const VERSION = '8.3.3';
+  const VERSION = '8.3.4';
 
   /**
    * Core API compatibility.
