@@ -45,6 +45,7 @@ class FileItemValidationTest extends KernelTestBase {
       'status' => 1,
     ]);
     $this->user->save();
+    $this->container->get('current_user')->setAccount($this->user);
   }
 
   /**
@@ -85,6 +86,7 @@ class FileItemValidationTest extends KernelTestBase {
     // Test for max filesize.
     $file = File::create([
       'uri' => 'vfs://drupal_root/sites/default/files/test.txt',
+      'uid' => $this->user->id(),
     ]);
     $file->setPermanent();
     $file->save();
