@@ -1,3 +1,7 @@
+Drupal 8.3.4, 2017-06-21
+------------------------
+- Fixed security issues. See SA-CORE-2017-003.
+
 Drupal 8.3.1, 2017-04-19
 ------------------------
 - Fixed security issues. See SA-CORE-2017-002.
